dataset1235/2025-2/2318198438/users/473799190/executions/2601575092_359632665.log
== SUBMISSION (2025-08-14 00:32:21)
-- CODE: 
print(round(2(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:25:08)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:16)
-- CODE: 
amigos = 250
divisão = amigos/6
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:35:56)
-- CODE: 
print(round(duas casas decimais(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(duas casas decimais(250/6)))
                ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(duas casas decimais(250/6)))
                ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:32:59)
-- CODE: 
print(round((250/6,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:43:37)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round(divisão))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 00:26:09)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:32:33)
-- CODE: 
print(round(2/(250/6)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
0
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:52)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round*2(divisão))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round*2(divisão))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round*2(divisão))
                ^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round*2(divisão))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round*2(divisão))
                ^^^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:32:58)
-- CODE: 
print(round((250/6,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:33:36)
-- CODE: 
print(round((250/6)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:53)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round*2(divisão))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round*2(divisão))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round*2(divisão))
                ^^^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:3: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round*2(divisão))
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round*2(divisão))
                ^^^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:35:16)
-- CODE: 
print(round(2(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:47:07)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round(divisão,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:45)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round(divisão))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:25:51)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:43:21)
-- CODE: 
amigos = 250
divisão = amigos/6
print=(rounddivisão))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    print=(rounddivisão))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    print=(rounddivisão))
                        ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:25:56)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:32:57)
-- CODE: 
print(round((250/6,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((250/6,2)))
          ^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:33:14)
-- CODE: 
print(round(2(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:31:29)
-- CODE: 
print(round(250*6))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
1500
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
1500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:43:20)
-- CODE: 
amigos = 250
divisão = amigos/6
print=(rounddivisão))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    print=(rounddivisão))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 3
    print=(rounddivisão))
                        ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:33:15)
-- CODE: 
print(round(2(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:36:22)
-- CODE: 
print(round(duas(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(duas(250/6)))
                ^^^^
NameError: name 'duas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(duas(250/6)))
                ^^^^
NameError: name 'duas' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:32:12)
-- CODE: 
print(round(2*(250/6)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
83
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:36:51)
-- CODE: 
print(round(250/6))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:24:14)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:42:15)
-- CODE: 
amigos = 250
divisão = amigos/6
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:25:43)
-- CODE: 
print (250/6*n)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (250/6*n)
                 ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (250/6*n)
                 ^
NameError: name 'n' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:43:37)
-- CODE: 
amigos = 250
divisão = amigos/6
print(round(divisão))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:25:19)
-- CODE: 
print (250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:35:20)
-- CODE: 
print(round((250/6)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:35:15)
-- CODE: 
print(round(2(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
XXXX:1: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  print(round(2(250/6)))
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2(250/6)))
                ^^^^^^^^
TypeError: 'int' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 00:36:21)
-- CODE: 
print(round(duas(250/6)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(duas(250/6)))
                ^^^^
NameError: name 'duas' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(duas(250/6)))
                ^^^^
NameError: name 'duas' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
